--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "mongoose": "^5.12.7",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sanitize-html": "^2.3.3"
   },
   "devDependencies": {
     "eslint": "^7.25.0"
